Fixed column misalignment w/ Back button
Summary: Number of columns determined when FinalizePinLayout mounts

Reviewers: pjherold, gabriella

Reviewed By: gabriella

Subscribers: tilde, zackargyle

Differential Revision: https://phabricator.pinadmin.com/D102508

--- a/app/containers/App.css
+++ b/app/containers/App.css
@@ -89,8 +89,8 @@
   right: 0;
   width: 170px;
   background: #bf081c;
-/*  box-shadow: 0 -10px 20px 0 rgba(0,0,0,0.2);
-*/  right: 170px;
+  box-shadow: 0 -10px 20px 0 rgba(0,0,0,0.2);
+  right: 170px;
 
 }
 
